@@ -1,3 +1,9 @@
+2005-08-21  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* po/POTFILES.in: added missing entries
+	* src/boards/python/sudoku.py: now the list of sudoku of the same level
+	  are randomized
+
 2005-08-21  Yves Combe,,,  <set EMAIL_ADDRESS environment variable>
 
 	fix stripping trailing space in profile names (bruno).
